# governance-portal

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  instructions.md  metadata.json
governance/: Cargo.toml
governance-app/: Cargo.toml
governance-app/src/: chain_indexer.rs  contracts.rs  lib.rs  p2p_committee.rs  storage.rs
governance/src/: chain_indexer.rs  contracts.rs  lib.rs  p2p_committee.rs  storage.rs
pkg/: manifest.json
ui/: package-lock.json  package.json  tsconfig.json
ui/src/: App.css  App.tsx  index.css
ui/src/components/: CommitteeStatus.tsx  CreateProposal.tsx  DaoInfo.tsx  ProposalDetail.tsx  ProposalDiscussion.tsx  ProposalList.tsx  VotingPanel.tsx
ui/src/config/: wallet.ts
ui/src/store/: governance.ts
ui/src/types/: api.ts  governance.ts
ui/src/utils/: api.ts
