[package]
name = "governance-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperware:process"

[dependencies]
# Core dependencies for Hyperware apps
anyhow = "1.0"
process_macros = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.42.1"

# P2P and serialization dependencies
bincode = "1.3"
sha3 = "0.10"
ed25519-dalek = "2.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"

# CRDT dependencies for distributed state synchronization
# crdts = "7.0"  # Temporarily disabled - using simplified CRDT
im = "15.1"  # Persistent data structures for CRDT
hex = "0.4"

# IMPORTANT: hyperprocess_macro provides async support and WIT generation
[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "f1cd5bb"

# Common utilities for Hyperware apps
[dependencies.hyperware_app_common]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "f1cd5bb"

[dependencies.caller-utils]
path = "../target/caller-utils"

[features]
# Use simulation-mode for testing without a full Hyperware node
simulation-mode = []